k8s/application/grpc_gateway_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-gateway-deployment
  labels:
    app.kubernetes.io/name: grpc-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: grpc-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grpc-gateway
    spec:
      containers:
      - name: grpc-gateway
        image: dubov94/keyring-grpc-gateway:7c97a6f0627fda6744edbf057d1a9d40ce74e4b7
        ports:
        - containerPort: 5002
