k8s/application/ip_geolocation_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-geolocation-deployment
  labels:
    app.kubernetes.io/name: ip-geolocation
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ip-geolocation
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ip-geolocation
    spec:
      containers:
      - name: ip-geolocation
        image: dubov94/keyring-ip-geolocation:71b0dd17ea9abd639778c7239775be436d3d3641
        ports:
        - containerPort: 5003
