k8s/application/mailer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer-deployment
  labels:
    app.kubernetes.io/name: mailer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mailer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailer
    spec:
      containers:
      - name: mailer
        image: dubov94/keyring-mailer:****6ea6
        securityContext:
          allowPrivilegeEscalation: false
