k8s/application/pwa_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pwa-deployment
  labels:
    app.kubernetes.io/name: pwa
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pwa
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pwa
    spec:
      containers:
      - name: pwa
        image: dubov94/keyring-pwa:d742ee3cec8cf1ca35a4e3e46ea06cd0947b398e
        ports:
        - containerPort: 8080
