k8s/application/redirection_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirection-deployment
  labels:
    app.kubernetes.io/name: redirection
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redirection
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redirection
    spec:
      containers:
      - name: redirection
        image: dubov94/keyring-redirection:001275cfeb28e8bb1aad6b37787babf6c77f47e2
        ports:
        - containerPort: 8080
