k8s/application/server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app.kubernetes.io/name: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
    spec:
      containers:
      - name: server
        image: dubov94/keyring-server:71b0dd17ea9abd639778c7239775be436d3d3641
        resources:
          limits:
            memory: 320Mi
        ports:
        - containerPort: 5001
