k8s/application/ip_geolocation_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-geolocation-service
spec:
  selector:
    app.kubernetes.io/name: ip-geolocation
  ports:
    - protocol: TCP
      port: 5003
