k8s/application/pwa_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pwa-service
spec:
  selector:
    app.kubernetes.io/name: pwa
  ports:
    - protocol: TCP
      port: 8080
