k8s/application/redirection_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirection-service
spec:
  selector:
    app.kubernetes.io/name: redirection
  ports:
    - protocol: TCP
      port: 8080
