k8s/application/pwa_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pwa-ingress
  # https://kubernetes.github.io/ingress-nginx/user-guide/tls/#server-side-https-enforcement-through-redirect
  # https://kubernetes.github.io/ingress-nginx/user-guide/tls/#http-strict-transport-security
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - "parolica.com"
    secretName: cluster-tls
  rules:
  - host: "parolica.com"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/(.*)"
        backend:
          service:
            name: pwa-service
            port:
              number: 8080
